Refactor HTML and SCSS to use BEM class naming
Removed BEM-related TODO comments from SCSS files and updated HTML templates to use BEM-compliant class names for footer, header, sidebar menu, and payment list elements. This improves code consistency and maintainability by standardizing class naming conventions across the project.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "todo:bem": "rg --no-heading --line-number \"TODO: BEM\" css/sass"
+    "todo:bem": "rg --no-heading --line-number \"TODO: BEM\" css"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
